# healthcare-ai-assistant

./: .coverage  .gitignore  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt
ci-cd/: cd-infra.yml  cd-ml.yml  ci.yml
configs/: train_config.yaml
docs/: api-design.md  architecture.md  ml-design.md  responsible-ai-report.md  runbook-operations.md  system-design.md
examples/notebooks/: 01_eda.ipynb  02_feature_prototyping.ipynb  03_model_experiments.ipynb
infra/terraform/envs/dev/: main.tf  (+5 more)
src/common/: __init__.py  config.py  logging_utils.py  schemas.py  utils.py
src/data_pipeline/: __init__.py  feature_engineering.py  feature_store.py  ingest.py  transform.py  validate.py
src/data_pipeline/great_expectations/: encounters_suite.json
src/deployment/aml_endpoint/: deployment.yml  endpoint.yml  sample_request.json
src/deployment/scoring/: environment.yml  score.py
src/ml_pipeline/: __init__.py  evaluate.py  hyperparameter_tuning.py  pipeline_definition.py  pipeline_definition.yml  register_model.py  train.py
src/monitoring/: __init__.py  alert_rules.json  app_insights_queries.kql  data_drift_detection.py  model_drift_detection.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/performance/: test_scoring_latency.py
tests/unit/: test_config.py  test_drift_detection.py  test_error_analysis.py  test_evaluate.py  test_fairness_metrics.py  test_feature_engineering.py  test_logging_utils.py  test_register_model.py  test_schemas.py  test_shap_explainability.py  test_transform.py  test_utils.py  test_validate.py
(+34 files in other folders)
