[project]
name = "healthcare-ai-assistant"
version = "0.1.0"
description = "AI-Powered Personalized Healthcare Assistant - readmission risk prediction on Azure ML"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --cov=src --cov-report=term-missing"
markers = [
    "performance: benchmarks scoring latency (deselect with -m 'not performance')",
]

[tool.coverage.run]
branch = true
source = ["src"]
